@startuml
class Client {
    - dni: String
    - nom: String
    - pin: String
    - intentsFallits: int
    - bloquejat: boolean

    + Client(dni:String,nom:String,pin:String)

    + setDni(dni:String)
    + setPin(pin:String)
    + setNom(nom:String)
    + getDni(): String
    + getNom(): String
    + isBloquejat(): boolean

    

}

class Compte {
    # numero: String
    # saldo: double
    # titular: Client
    # interesAnual: double
    {static} - comptador: int
    {static} - prefix: String

    + Compte()
    + Compte(saldo: double)

    + calcularInteresAnual(): double
    + ingressar(quantitat:double)
    + retirar(quantitat:double):boolean
    + transfarencia(desti:Compte,quantitat: double):boolean
    + mostrarMoviments()

    + setNumero(numero: String)
    + setSaldo(saldo: double)
    + setTitular(titular: String)
    + setInteresAnual(interesAnual: double)
    + getNumero(): String
    + getSaldo(): double
    + getTitular(): String
    + getInteresAnual(): double
}

Client "1" --> "1..*" Compte : Titular


class Banc {
    + nom: String
    + validar (dni: String, pin:String)

}

Banc "*" --> "*" Client : tenir
Banc "1" -->"*" Compte: pertany

class CompteCorrent extends Compte{
    - limitDescobert: double
    + retirar (quantitat:double)

    + CompteCorrent()
    + CompteCorrent(limitDescobert: double, saldo: double)

    + getLimitDescobert(): double
    + setLimitDescobert(limitDescobert:double)
    

}

class CompteEstalvi extends Compte{
    - saldoMinim: double
    + retirar (quantitat: double)

    + CompteEstalvi()
    + CompteEstalvi(saldoMinim:double, saldo: double)

    + getSaldoMinim(): double
    + setSaldoMinim(saldoMinim: double)
}

class Caixer{
    - banc: Banc
    - client: Client

    + login(dni: string)
    + treure()
    + ingressar()
    + mostrarSaldo()
    + logout()
}

class Moviment{
    - Datahora: LocalDateTime
    - tipus: String
    - descripcio: String
    - quantitat: double

    + Moviment (tipus: String,descripcio: String,quantitat: double, Datahora: LocalDateTime)
}
Moviment "*"-->"1" Compte: moviments

Caixer "*" -->"1" Banc: és
Caixer "1" -->"1" Client: connectat
@enduml